<resources>
    <string name="app_name">RandNum</string>
    <string name="generation_header">Сгенерировать случайное число из диапазона:</string>
    <string name="start_range">-10</string>
    <string name="end_range">10</string>
    <string name="generation_button">Сгенерировать</string>
    <string name="left_bracket">[</string>
    <string name="right_bracket">]</string>
    <string name="semicolon">;</string>
    <string name="some_generation_header_1">Сгенерировать</string>
    <string name="some_generation_header_2">случайных чисел из диапазона:</string>
    <string name="quantity">5</string>
    <string name="selection_header">Выбор режима работы</string>
    <string name="single_generate">Сгенерировать одно случайное число</string>
    <string name="some_generate">Сгенерировать несколько случайных чисел</string>
</resources>


