<?xml version="1.0" encoding="utf-8"?>

<!-- ConstraintLayout, выступающий контейнером для других элементов макета -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Первая часть заголовка генерации -->
    <TextView
        android:id="@+id/generation_header_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/some_generation_header_1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/generation_header_2"
        app:layout_constraintEnd_toStartOf="@+id/quantity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Поле ввода количества чисел -->
    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:autofillHints="@string/start_range"
        android:hint="@string/quantity"
        android:inputType="numberSigned"
        android:maxWidth="80dp"
        android:minWidth="80dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/generation_header_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/generation_header_1" />

    <!-- Вторая часть заголовка генерации -->
    <TextView
        android:id="@+id/generation_header_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/some_generation_header_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Левая скобка -->
    <TextView
        android:id="@+id/left_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="90dp"
        android:text="@string/left_bracket"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/some_rand_num"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Поле для ввода числа начала диапозона -->
    <EditText
        android:id="@+id/start_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:autofillHints="@string/start_range"
        android:hint="@string/start_range"
        android:inputType="numberSigned"
        android:maxWidth="80dp"
        android:minWidth="80dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/some_rand_num"
        app:layout_constraintEnd_toStartOf="@+id/semicolon"
        app:layout_constraintStart_toEndOf="@+id/left_bracket" />

    <!-- Разделительная точка с запятой -->
    <TextView
        android:id="@+id/semicolon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:text="@string/semicolon"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/some_rand_num"
        app:layout_constraintEnd_toStartOf="@+id/right_bracket"
        app:layout_constraintStart_toEndOf="@+id/left_bracket" />

    <!-- Поле для ввода числа конца диапозона -->
    <EditText
        android:id="@+id/end_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:autofillHints="@string/end_range"
        android:hint="@string/end_range"
        android:inputType="numberSigned"
        android:maxWidth="80dp"
        android:minWidth="80dp"
        android:textAlignment="center"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/some_rand_num"
        app:layout_constraintEnd_toStartOf="@+id/right_bracket"
        app:layout_constraintStart_toEndOf="@+id/semicolon" />

    <!-- Правая скобка -->
    <TextView
        android:id="@+id/right_bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="90dp"
        android:text="@string/right_bracket"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/some_rand_num"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Поле со сгенерированными случайными числами -->
    <TextView
        android:id="@+id/some_rand_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/generation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generation_header_2"
        tools:text="1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15" />

    <!-- Кнопка для генерации случайных чисел -->
    <Button
        android:id="@+id/generation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/generation_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>